2010-02-27  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (StringFirstCmd, StringLastCmd): [Bug 2960021]:
	Only search for the needle in the haystack when the needle isn't
	larger than the haystack. Prevents an odd crash from sometimes
	happening when things get mixed up (a common programming error).

2010-02-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclBasic.c:   Fix [Bug 2954959] expr abs(0.0) is -0.0
	* tests/expr.test

2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>

	* tcl.m4: Correct compiler/linker flags for threaded builds on OpenBSD
	* configure: (regenerated).

2010-02-19  Donal K. Fellows  <dkf@users.sf.net>

	* unix/installManPage: [Bug 2954638]: Correct behaviour of manual page
	installer. Also added armouring to check that assumptions about the
	initial state are actually valid (e.g., look for existing input file).

2010-02-11  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclIOCmd.c (Tcl_OpenObjCmd): [Bug 2949740]: Make sure that
	we do not try to put a NULL pipeline channel into binary mode.

2010-02-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/genStubs.tcl     Backport various formatting (spacing)
	* generic/tcl*.decls     changes from HEAD, so diffing
	* generic/tcl*Decls.h    between 8.5.x and 8.6 shows the
	* generic/tclStubInit.c  real structural differences again.
	                         (any signature change not backported!)

2010-02-03  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclVar.c (Tcl_ArrayObjCmd): More corrections for the 'unset'
	subcommand.

2010-02-02  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCompile.c: [Bug 2933089]: A literal sharing problem with
	* generic/tclCompile.h: 'info frame' affects not only 8.6 but 8.5 as
	* generic/tclExecute.h: well. Backported the fix done in 8.6, without
	* tests/info.test: changes. New testcase info-39.1.

2010-02-02  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclVar.c (Tcl_ArrayObjCmd): [Bug 2939073]: Stop the [array